# saivers

./: .gitignore  CLAUDE.md  README.md  skills-lock.json
ac-simulator/: README.md  main.py  models.py  pyproject.toml  router.py  store.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/data/: households.py  rooms.py
backend/app/db/: client.py  migrations.py
backend/app/models/: device.py  habit.py  insight.py
backend/app/routers/: admin.py  aircon.py  devices.py  focus.py  habits.py  ingest.py  insights.py  recommendations.py  reports.py  usage.py  weekly_insights.py
backend/app/services/: ai_service.py  anomaly_service.py  device_store.py  habit_service.py  insight_service.py  mcp_client.py  monthly_report_service.py  recommendation_service.py  reward_service.py  weekly_insight_service.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: compute_features.py  generate_ac_data.py  generate_sp_data.py  generate_weekly_insights.py  seed_ac_multiroom.py  seed_anomaly_cases.py  seed_clickhouse.py  seed_device_registry.py  seed_focus_actions.py  seed_rewards.py  seed_success_week.py  simulate_realtime.py  smoke_test.sh  test_clickhouse.py  test_integration_flow.py
docs/architecture/: README.md
docs/database/: README.md
docs/pitch/: README.md
frontend/: .gitignore  list-tables.mjs  package-lock.json  package.json
frontend/app/: globals.css  (+2 more)
librechat-config/: README.md  demo-prompts.md  docker-compose.override.yml  librechat.yaml
xiaomi-purifier/: .dockerignore  Dockerfile  README.md
xiaomi-purifier/backend/: .env.example  README.md  pyproject.toml  requirements.txt
xiaomi-purifier/backend/app/: main.py
xiaomi-purifier/backend/app/services/: miio_purifier.py  purifier_service.py
(+108 files in other folders)
