[project]
name = "backend"
version = "0.1.0"
description = "WattCoach backend — FastAPI + ClickHouse energy analytics API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clickhouse-connect>=0.13.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
